--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .container {
     width: 360px;
-    height: 100vh;
+    height: 100%;
     margin: 56px auto 0px;
     padding: 0 24px;
     box-shadow: 8px 5px 30px black;
@@ -103,9 +103,6 @@ body {
         color: black;
     }
 
-    .Listas li:hover{
-        transform:scale3d(3px)
-    }
 
 
 
