--- a/style.css
+++ b/style.css
@@ -116,6 +116,12 @@ body {
         font-size: 0.9em;  
     }
 
+    .icons {
+        position: absolute;
+        left: 25%;
+    
+    }
+
 
 
 
